# CatGPT

./: .gitignore  README.md  ask.py  confg.example.json  config.example.json  context.py  endpoints.example.json  main.py  migrate.py  presets.json  pyproject.toml  requirements.txt  session.py  start.py  topic.py  user_profile.py
.github/workflows/: ci.yml  release.yml
assets/: session_schema.sql
commands/: __init__.py  chat.py  clear.py  conversation.py  endpoints.py  key.py  list.py  models.py  new_convo.py  profile.py  revoke.py
share/: github.py
src/catgpt/: ask.py  context.py  group.py  main.py  topic.py  types.py  user_profile.py
src/catgpt/commands/: __init__.py  chat.py  clear.py  conversation.py  endpoints.py  group.py  key.py  list.py  models.py  new_convo.py  profile.py  revoke.py
src/catgpt/data/: session_schema.sql
src/catgpt/provider/: __init__.py  ask.py  gemini.py  oai.py
src/catgpt/share/: __init__.py  github.py  preview.py  telegraph.py
src/catgpt/storage/: sqlite3_session_storage.py  tx.py  types.py
src/catgpt/utils/: md2tgmd.py  prompt.py  text.py  tg_image.py
storage/: __init__.py  sqlite3_session_storage.py  tx.py  types.py
tests/: test_sqlite.py
utils/: md2tgmd.py  prompt.py  text.py
