[project]
name = "CatGPT"
version = "0.1.0"
description = "A chatbot built on telegram that integrates OpenAI's API"
authors = [
    {name = "bigbyto", email = "bigbyto@gmail.com"},
]
dependencies = [
    "pyTelegramBotAPI==4.18.1",
    "markdown-it-py==3.0.0",
    "openai==1.6.0",
    "aiohttp==3.9.1",
    "telegramify-markdown==0.1.4",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
cat-gpt = "catgpt.main:launch"
