[project]
name = "mqgpt"
version = "0.1.1"
description = "A chatbot built on telegram that integrates OpenAI's API"
authors = [
    {name = "bigbyto", email = "bigbyto@gmail.com"},
]
dependencies = [
    "pyTelegramBotAPI==4.18.1",
    "markdown-it-py==3.0.0",
    "openai==1.6.0",
    "aiohttp==3.9.1",
    "telegramify-markdown==0.1.8",
    "google-generativeai==0.7.0",
    "markdown",
    "bs4"
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
mq-gpt = "catgpt.main:launch"

[tool.pdm.build]
includes = ["src", "assets/"]
